tests/compile-fail/generated/derives-span-PartialEq-struct.stderr
error[E0369]: binary operation `==` cannot be applied to type `&Error`
  --> $DIR/derives-span-PartialEq-struct.rs:15:5
   |
15 |     x: Error
   |     ^
   |
   = note: an implementation of `std::cmp::PartialEq` might be missing for `&Error`
